--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,9 +1,22 @@
 .item{
     color: #e34e4e;
+    display: flex;
+    flex-direction: row;
 }
-
+.flexCol{
+    display: flex;
+    flex-direction: column;
+}
 .item.active{
     color: gold;
+}
+.postBox{
+    background-color: #fff;
+    min-width: 200px;
+    min-height: 100px;
+    padding: 16px;
+    border-radius: 16px;
+    margin-bottom: 16px;
 }
 
 .avatar{
@@ -12,6 +25,7 @@
     border-radius: 100%;
     overflow: hidden;
     position: relative;
+    margin-right: 16px;
 }
 .avatar img{
     min-height: 100%;
