--- a/src/components/common/Pagination/Pagination.module.css
+++ b/src/components/common/Pagination/Pagination.module.css
@@ -1,3 +1,6 @@
+.pagination{
+    margin: 16px 0;
+}
 .active{
     font-weight: bold;
     color: #89a5e5;
@@ -6,4 +9,19 @@
 .page{
     padding: 4px 8px;
     font-size: 16px;
+}
+
+.navBtn{
+    background: white;
+    border: none;
+    padding: 4px 8px;
+    border-radius: 4px;
+    margin: 0 4px;
+}
+.page{
+    background: white;
+    border: none;
+    padding: 4px 8px;
+    border-radius: 4px;
+    margin: 0 4px;
 }
