--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -4,8 +4,13 @@
 .topCoverImageWrapper{
     width: 100%;
     height: 240px;
+
+}
+
+.topCoverImageWrapperInner{
     overflow: hidden;
     position: relative;
+    height: 240px;
 }
 
 .topCoverImage{
@@ -16,4 +21,40 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.avatarWrapper{
+    position: relative;
+    bottom: 0;
+    left: 50%;
+    transform: translate(0, -50%);
+    height: 200px;
+    width: 200px;
+    overflow: hidden;
+    border-radius: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+}
+.avatarImage{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    max-height: 100%;
+    max-width: 100%;
+    z-index: 1;
+}
+.avatarWrapper:hover .avatarImage{
+    opacity: 0;
+    z-index: 0;
+}
+.avatarWrapper:hover .uploadAvatarInput{
+    opacity: 1;
+    z-index: 1;
+}
+.uploadAvatarInput{
+    opacity: 0;
 }
