--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -43,9 +43,11 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 150%;
+    max-width: 150%;
     z-index: 1;
+    min-width: 100%;
+    min-height: 100%;
 }
 .avatarWrapper:hover .avatarImage{
     opacity: 0;
